--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # sudo tee /etc/attendance.env > /dev/null <<'EOF'
-API_BASE_URL=https://office.encoderit.net/backend/public
-EMAIL=nahid@encoderit.net
-PASSWORD=nahid123
+API_BASE_URL="endpoint"
+EMAIL=""
+PASSWORD=""
 TZ=Asia/Dhaka
 DRY_RUN=0 # 
 
